clang/test/BSC/Negative/NullabilityCheck/nested_struct.cbs
// RUN: %clang_cc1 -verify %s

struct M {
    int *_Owned _Nullable a;
};

struct N {
    struct M *_Borrow _Nullable b;
};

_Safe void test1(void) {
    struct N n1 = { .b = nullptr };
    if (n1.b->a != nullptr)   // expected-error {{cannot access member through nullable pointer}}
        *n1.b->a = 10;  // expected-error {{cannot access member through nullable pointer}}
    struct M m = { .a = nullptr };
    struct N n2 = { .b = &_Mut m };
    if (n2.b->a != nullptr)
        *n2.b->a = 10;
}

_Safe void test2(void) {
    struct N n1 = { .b = nullptr };
    if (n1.b != nullptr && n1.b->a != nullptr)
        *n1.b->a = 10;
}

_Safe void test3(void) {
    struct N n1 = { .b = nullptr };
    if (n1.b->a != nullptr && n1.b != nullptr)  // expected-error {{cannot access member through nullable pointer}}
        *n1.b->a = 10;
}

_Safe void test4(void) {
    struct N n1 = { .b = nullptr };
    if (n1.b != nullptr)
        if (n1.b->a != nullptr)
            *n1.b->a = 10;
}

_Safe void safe_free (struct N *_Owned _Nullable p);
_Safe struct N *_Owned _Nullable safe_malloc(struct N n);

_Safe void test5(void) {
    struct N n = { .b = nullptr };
    struct N *_Owned _Nullable p = safe_malloc(n);
    if (p->b->a != nullptr)   // expected-error {{cannot access member through nullable pointer}}
        *p->b->a = 10;  // expected-error {{cannot access member through nullable pointer}}
    safe_free(p);
}

_Safe void test6(void) {
    struct N n = { .b = nullptr };
    struct N *_Owned _Nullable p = safe_malloc(n);
    if (p->b != nullptr && p->b->a != nullptr)  // expected-error {{cannot access member through nullable pointer}} expected-error {{cannot access member through nullable pointer}}
        *p->b->a = 10; // expected-error {{cannot access member through nullable pointer}}
    safe_free(p);
}


_Safe void test7(void) {
    struct N n = { .b = nullptr };
    struct N *_Owned _Nullable p = safe_malloc(n);
    if (p != nullptr) {
        if (p->b != nullptr)
            if (p->b->a != nullptr) 
                *p->b->a = 10;
        safe_free(p);
    }
}

_Safe void test8(void) {
    struct N n = { .b = nullptr };
    struct N *_Owned _Nullable p = safe_malloc(n);
    if (p != nullptr && p->b != nullptr && p->b->a != nullptr)
        *p->b->a = 10;
    safe_free(p);
}

_Safe void test9(void) {
    struct N n = { .b = nullptr };
    struct N *_Owned _Nullable p = safe_malloc(n);
    if (p != nullptr && p->b != nullptr)
        if (p->b->a != nullptr) 
            *p->b->a = 10;
    safe_free(p);
}
